# datefinder

./: .env.example  .gitignore  AGENTS.md  README.md  flake.nix  manage.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/prompts/: plan-confirmView.prompt.md
calendar_app/: adapters.py  admin.py  apps.py  consumers.py  context_processors.py  hooks.py  ical.py  models.py  routing.py  tests.py  urls.py  views.py
calendar_app/management/commands/: migrate_from_sqlite.py
calendar_app/migrations/: 0001_initial.py  0002_confirmeddate.py  0003_reminder.py  0003_rssfeed.py  0004_note.py
datefinder/: asgi.py  cli.py  settings.py  urls.py  wsgi.py
datefinder/templates/: base.html
datefinder/templates/account/: logout.html  signup.html
datefinder/templates/calendar_app/: calendar.html  reminders.html
datefinder/templates/socialaccount/: login.html
health/: checks.py  tests.py  views.py
nixos/: module.nix  package.nix  test-migration.nix  test-websocket.nix  test.nix
static/: .gitkeep
static/css/: base.css  calendar.css  news.css  notes.css
templates/account/: base.html  login.html  logout.html  signup.html
templates/calendar_app/: base.html  calendar.html  confirm.html  news.html  notes.html  reminders.html
templates/socialaccount/: login.html
